--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,22 +18,22 @@ endif ()
 # Get all of the header and source files in the appropriate directories
 file(GLOB ANYRPC_SOURCES *.cpp)
 file(GLOB ANYRPC_INTERNAL_SOURCES internal/*.cpp)
-file(GLOB ANYRPC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
-file(GLOB ANYRPC_INTERNAL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/internal/*.h)
+file(GLOB ANYRPC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include/*.h)
+file(GLOB ANYRPC_INTERNAL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include/internal/*.h)
 
 if (BUILD_PROTOCOL_JSON)
     file(GLOB ANYRPC_JSON_SOURCES json/*.cpp)
-    file(GLOB ANYRPC_JSON_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/json/*.h)
+    file(GLOB ANYRPC_JSON_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include/json/*.h)
 endif ()
 
 if (BUILD_PROTOCOL_XML)
     file(GLOB ANYRPC_XML_SOURCES xml/*.cpp)
-    file(GLOB ANYRPC_XML_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/xml/*.h)
+    file(GLOB ANYRPC_XML_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include/xml/*.h)
 endif ()
 
 if (BUILD_PROTOCOL_MESSAGEPACK)
     file(GLOB ANYRPC_MESSAGEPACK_SOURCES messagepack/*.cpp)
-    file(GLOB ANYRPC_MESSAGEPACK_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/messagepack/*.h)
+    file(GLOB ANYRPC_MESSAGEPACK_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../include/messagepack/*.h)
 endif ()
 
 set(ANYRPC_SOURCES ${ANYRPC_SOURCES} ${ANYRPC_INTERNAL_SOURCES} 
@@ -53,7 +53,7 @@ endif ()
 # Create the libraries with these header and source files
 add_library( anyrpc ${ANYRPC_LIB_TYPE} ${ANYRPC_SOURCES} ${ANYRPC_HEADERS} )
 target_link_libraries( anyrpc ${ASAN_LIBRARY} ${LOG4CPLUS_LIBRARIES})
-target_include_directories( anyrpc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include )
+target_include_directories( anyrpc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../include )
 
 # Need the winsock library for Windows
 if (WIN32)
